--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "gsap": "^3.13.0",
+    "i18next": "^25.5.3",
     "next": "15.5.4",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^4.0.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-i18next": "^16.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
