--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,14 +14,21 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@next/font": "^14.2.15",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "i18next": "^25.5.3",
+    "lenis": "^1.3.11",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^16.0.0"
+    "react-i18next": "^16.0.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -29,6 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
