--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.5.0",
     "gsap": "^3.13.0",
     "i18next": "^25.5.3",
     "lenis": "^1.3.11",
@@ -24,17 +25,22 @@
     "next": "15.5.4",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.0.0",
+    "nextjs-toast-notify": "^1.57.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.79.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "supabase": "^2.54.11",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
