--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@next/font": "^14.2.15",
-    "@studio-freight/react-lenis": "^0.0.47",
+    "@reduxjs/toolkit": "^2.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.5.0",
